fixing scaling and chat input not showing

--- a/src/client/Game/styles.css
+++ b/src/client/Game/styles.css
@@ -4,7 +4,7 @@
     top: 50%;
     left: 50%;
     position: fixed;
-    transform: translate(-50%, -50%) scale(1.25, 1.25);
+    transform: translate(-50%, -50%) scale(1.2, 1.2);
 }
 
 
